--- a/.github/workflows/terraform-test-plan-apply.yml
+++ b/.github/workflows/terraform-test-plan-apply.yml
@@ -53,7 +53,9 @@ jobs:
       run: terraform init
 
     - name: Terraform Plan
-      run: terraform plan -out=terraform.plan
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      run: terraform plan -out=terraform.plan -var="gh_token=${{ env.GH_TOKEN }}"
 
     - name: Upload Terraform Plan
       uses: actions/upload-artifact@v4
@@ -83,4 +85,6 @@ jobs:
         path: .
 
     - name: Terraform Apply
-      run: terraform apply -auto-approve terraform.plan
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      run: terraform apply -auto-approve terraform.plan -var="gh_token=${{ env.GH_TOKEN }}"
